--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="twitter:site" content="https://x.com/vipulkant99" />
+    <meta name="twitter:title" content="Vipul Kant Chaturvedi | Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Experienced in crafting seamless web and mobile applications. For project inquiries or collaborations, please connect via the Contact Us section."
+    />
+    <meta name="twitter:image" content="/header.png" />
+
     <title>Portfolio - Vipul Kant Chaturvedi</title>
   </head>
   <body>
