small tweaks in X card

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@vipulkant99" />
     <meta name="twitter:creator" content="@vipulkant99" />
     <meta name="twitter:title" content="Vipul Kant Chaturvedi | Portfolio" />
@@ -14,7 +15,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://github.com/vipulkant99/portfolio/blob/main/public/header.png"
+      content="https://etzirlhogriyeegpnwqc.supabase.co/storage/v1/object/sign/portfolio_files/header.png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV9kM2ZkOTliMy0yM2ZiLTRkYzYtYWUxMS05YjcxMDY0Y2JhNWMiLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJwb3J0Zm9saW9fZmlsZXMvaGVhZGVyLnBuZyIsImlhdCI6MTc1NTMyMTI3MCwiZXhwIjoxNzg2ODU3MjcwfQ.H0OaC3TCoiCFeQOTK0pug44h4Sc5H24qc3XyufxsRvY"
     />
 
     <title>Portfolio - Vipul Kant Chaturvedi</title>
