image tweaks2 in X card

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://etzirlhogriyeegpnwqc.supabase.co/storage/v1/object/sign/portfolio_files/header1.png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV9kM2ZkOTliMy0yM2ZiLTRkYzYtYWUxMS05YjcxMDY0Y2JhNWMiLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJwb3J0Zm9saW9fZmlsZXMvaGVhZGVyMS5wbmciLCJpYXQiOjE3NTUzMjIwNDUsImV4cCI6MTc4Njg1ODA0NX0._BGYWy5BAiU_GrARU2_UCr0HvIoMvG8yUPLcrtIlwow"
+      content="https://etzirlhogriyeegpnwqc.supabase.co/storage/v1/object/sign/portfolio_files/header1.png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV9kM2ZkOTliMy0yM2ZiLTRkYzYtYWUxMS05YjcxMDY0Y2JhNWMiLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJwb3J0Zm9saW9fZmlsZXMvaGVhZGVyMS5wbmciLCJpYXQiOjE3NTUzMjIwNDUsImV4cCI6MTc4Njg1ODA0NX0._BGYWy5BAiU_GrARU2_UCr0HvIoMvG8yUPLcrtIlwow&v=2"
     />
 
     <title>Portfolio - Vipul Kant Chaturvedi</title>
