changed x image url

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://etzirlhogriyeegpnwqc.supabase.co/storage/v1/object/sign/portfolio_files/header2.png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV9kM2ZkOTliMy0yM2ZiLTRkYzYtYWUxMS05YjcxMDY0Y2JhNWMiLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJwb3J0Zm9saW9fZmlsZXMvaGVhZGVyMi5wbmciLCJpYXQiOjE3NTUzMjI5OTMsImV4cCI6MTc4Njg1ODk5M30.il2-jZs-2PdizCfSHKYIlbWAZ6W_dog437tVrd8WL38&v=3"
+      content="https://drive.google.com/file/d/1HQk4x1g-6SyAnGzGIMOM4nz0ykHfmgMS/view?usp=drive_link"
     />
 
     <title>Portfolio - Vipul Kant Chaturvedi</title>
