updated metadata image

--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@vipulkant99" />
-    <meta name="twitter:creator" content="@vipulkant99" />
-    <meta name="twitter:title" content="Vipul Kant Chaturvedi | Portfolio" />
-    <meta
-      name="twitter:description"
-      content="Experienced in crafting seamless web and mobile applications. For project inquiries or collaborations, please connect via the Contact Us section."
-    />
-    <meta
-      name="twitter:image"
-      content="https://drive.google.com/file/d/1HQk4x1g-6SyAnGzGIMOM4nz0ykHfmgMS/view?usp=drive_link"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Portfolio - Vipul Kant Chaturvedi</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@vipulkant99" />
+  <meta name="twitter:creator" content="@vipulkant99" />
+  <meta name="twitter:title" content="Vipul Kant Chaturvedi | Portfolio" />
+  <meta name="twitter:description"
+    content="Experienced in crafting seamless web and mobile applications. For project inquiries or collaborations, please connect via the Contact Us section." />
+  <meta name="twitter:image" content="https://www.imvkc.in/header1.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.imvkc.in/" />
+  <meta property="og:title" content="Vipul Kant Chaturvedi | Portfolio" />
+  <meta property="og:description"
+    content="Experienced in crafting seamless web and mobile applications. Explore my projects and professional journey." />
+  <meta property="og:image" content="https://www.imvkc.in/header1.png" />
+
+  <title>Portfolio - Vipul Kant Chaturvedi</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
